# ragged

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: bm25_index.pkl
notebooks/: 00_simple_local_rag.ipynb  phase1.ipynb
src/: config.py
src/chunking/: chunker.py
src/embeddings/: embedder.py
src/generation/: generator.py
src/ingestion/: ingest.py
src/llm/: provider.py
src/loaders/: pdf_loader.py
src/retrieval/: bm25_retriever.py  reranker.py  retriever.py  vector_retriever.py
