[project]
name = "rag101"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "chromadb>=1.5.9",
    "langchain-text-splitters>=1.1.2",
    "ollama>=0.6.2",
    "pandas>=3.0.3",
    "pymupdf>=1.27.2.3",
    "requests>=2.34.2",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.5.1",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
]
