[project]
name = "rag101"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,>=3.13"
dependencies = [
    "accelerate",
    "bitsandbytes",
    "chromadb",
    "langchain-text-splitters",
    "ollama",
    "pandas",
    "pymupdf",
    "requests",
    "scikit-learn",
    "sentence-transformers",
    "tqdm",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
            
[tool.uv.sources]
torch = { index = "pytorch-cu128" }
