[project]
name = "rag101"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,>=3.13"
dependencies = [
    "accelerate",
    "bitsandbytes",
    "chromadb",
    "google-generativeai>=0.8.6",
    "groq>=1.4.0",
    "langchain-text-splitters",
    "ollama",
    "pandas",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pymupdf",
    "rank-bm25>=0.2.2",
    "requests",
    "scikit-learn",
    "sentence-transformers",
    "torch>=2.11.0",
    "tqdm",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
            
[tool.uv.sources]
torch = { index = "pytorch-cu128" }
